--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^9",
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "v-calendar": "^3.0.0-alpha.6",
